[package]
name = "nrf-radio"
description = "A HAL library for nRFxxxx SoCs' RADIO peripheral"
license = "MIT"
documentation = "https://docs.rs/nrf-radio"
homepage = "https://github.com/stanekondrej/nrf-radio"
repository = "https://github.com/stanekondrej/nrf-radio"

version = "0.1.0"
edition = "2024"

[dependencies]
nrf51-hal = "0.18.0"
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
defmt = { version = "1.0.1", optional = true }

[features]
debug = ["dep:defmt"]
